fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -7,20 +7,26 @@ body,
     width: 100%;
     height: 100%;
     background: ivory;
+    /* background-color: blue; */
+}
+
+body {
+    margin: 0;
 }
 
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 10px;
+    gap: 8px;
     height: auto;
-    /* padding: 10px; */
-    background-color: green;
+    width: 100%;
+        /* background-color: red; */
+    /* margin: 8px; */
 }
 
 .view-box {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    min-height: 220px;
     z-index: 2;
     position: relative;
 }
@@ -28,9 +34,8 @@ body,
 .canvas {
     pointer-events: none;
     position: fixed !important;
-    /* top: 0px;
-    left: 0px; */
-    /* width: 100vw; */
-    background-color: red;
-    /* height: 100vh; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* background-color: purple; */
   }
